-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b12
-
x86
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2225118 | 8 | Roland Westrelin | P3 | Resolved | Fixed | b41 |
| JDK-8018235 | 7u45 | Roland Westrelin | P3 | Closed | Fixed | b01 |
| JDK-8002523 | 7u40 | Roland Westrelin | P3 | Closed | Fixed | b01 |
On x64, 7133857 broke pow(x,y) when x<0 and y is an odd integer. This affects debug builds only. int(y) is moved to an register to be tested for parity but between the load of int(y) and the test for parity some debugging code changes the content of the integer register.
This should affect only the interpreter and c1.
This should affect only the interpreter and c1.
- backported by
-
JDK-2225118 pow(x,y) or x64 computes incorrect result when x<0 and y is an odd integer
-
- Resolved
-
-
JDK-8002523 pow(x,y) or x64 computes incorrect result when x<0 and y is an odd integer
-
- Closed
-
-
JDK-8002524 pow(x,y) or x64 computes incorrect result when x<0 and y is an odd integer
-
- Closed
-
-
JDK-8018235 pow(x,y) or x64 computes incorrect result when x<0 and y is an odd integer
-
- Closed
-
- relates to
-
JDK-7174532 jdk/test/java/lang/Math/WorstCaseTests.java failing on x86
-
- Closed
-