7169934: pow(x,y) or x64 computes incorrect result when x<0 and y is an odd integer

Bad test for parity of y in pow(x,y) (c1, interpreter)

Reviewed-by: kvn, twisti